Fix(button): vertical alignment of icons in Firefox (#773)

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -50,6 +50,7 @@
   [class*="svg-"],
   [class*="icon-"] {
     display: inline-block;
+    transform: translateY(1px);
   }
 
   &:not(.btn-icon) {
